[gd_scene load_steps=9 format=3 uid="uid://b3oilgucxs8uq"]

[ext_resource type="Script" path="res://src/actors/car/car.gd" id="1_l67g7"]
[ext_resource type="PackedScene" uid="uid://dfntrurleh6e" path="res://src/actors/car/drift/drifter.tscn" id="3_u5js2"]
[ext_resource type="Script" path="res://src/nodes/hurtbox/hurtbox.gd" id="5_531ns"]
[ext_resource type="Script" path="res://src/nodes/hitbox/hitbox.gd" id="6_70o8b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_frxwr"]
radius = 21.0
height = 86.0

[sub_resource type="QuadMesh" id="QuadMesh_jgw1t"]

[sub_resource type="Gradient" id="Gradient_xa828"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_m36y2"]
gradient = SubResource("Gradient_xa828")

[node name="Car" type="RigidBody2D" groups=["player"]]
collision_layer = 9
mass = 10.0
inertia = 200.0
linear_damp = 1.0
angular_damp = 5.0
script = ExtResource("1_l67g7")

[node name="DriveWheel" type="Marker2D" parent="."]
position = Vector2(-24, 0)

[node name="SteeringWheel" type="Marker2D" parent="."]
position = Vector2(23, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_frxwr")

[node name="Drifter" parent="." instance=ExtResource("3_u5js2")]
position = Vector2(1, -1)

[node name="BackLeft" type="Marker2D" parent="Drifter"]
position = Vector2(-25, -17)

[node name="FrontLeft" type="Marker2D" parent="Drifter"]
position = Vector2(22, -17)

[node name="FrontRight" type="Marker2D" parent="Drifter"]
position = Vector2(22, 20)

[node name="BackRight" type="Marker2D" parent="Drifter"]
position = Vector2(-25, 18)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_531ns")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_frxwr")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_70o8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_frxwr")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="RightWheel" type="MeshInstance2D" parent="."]
position = Vector2(23, 19)
scale = Vector2(21.2286, 4.36637)
mesh = SubResource("QuadMesh_jgw1t")
texture = SubResource("GradientTexture2D_m36y2")

[node name="LeftWheel" type="MeshInstance2D" parent="."]
position = Vector2(23, -19)
scale = Vector2(21.2286, 4.36637)
mesh = SubResource("QuadMesh_jgw1t")
texture = SubResource("GradientTexture2D_m36y2")
